# edible

./: .env  Cargo.toml  dockerfile
.github/workflows/: deployDev.yml
assets/css/: blog.css  header.css  main.css  menu.css  news.css  school.css  store.css
src/: main.rs
src/api/: web.rs
src/api/web/: about.rs  blog.rs  contact.rs  home.rs  news.rs  school.rs  server.rs  store.rs
src/infra/: config.rs  logger.rs
templates/: about.html  blog.html  contact.html  footer.html  header.html  home.html  main.html  menu.html  news.html  school.html  store.html
templates/comps/: base.html  header.html
